# unonoctium

./: README.md
server/: Cargo.toml
server/bindings/: CreateLobbyParams.ts  JoinLobbyParams.ts  LobbyClientEvent.ts  LobbyCreatedParams.ts  LobbyJoinedParams.ts  LobbyMessageRequestType.ts  LobbyMessageResponseType.ts  LobbyServerEvent.ts
server/src/: events.rs  main.rs  state.rs
server/src/events/: base.rs  client.rs  macros.rs  server.rs  traits.rs
server/src/state/: game.rs  lobby.rs  player.rs  traits.rs
web/: .gitignore  package.json
web/public/: manifest.webmanifest
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/assets/: card.afphoto
web/src/components/: CardAction.tsx  CardCenter.tsx  CardEdges.tsx  CardNumber.tsx  CardText.tsx  UnoCard.tsx
web/src/wsclient/: BaseEvent.ts  Client.ts  Event.ts
